fixed add post share to alignment bug

--- a/src/assets/styles/customAntd.less
+++ b/src/assets/styles/customAntd.less
@@ -200,6 +200,9 @@
 }
 
 .c-checkbox-simple {
+  .ant-checkbox {
+   padding-top: 2px !important;
+  }
   .ant-checkbox + span {
     padding-left: 1px !important;
     padding-right: 1px !important;
